Bug 59194 - [r300g] sauerbraten corrupted with MSAA
Summary: [r300g] sauerbraten corrupted with MSAA
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r300 (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-10 13:09 UTC by Fabio Pedretti
Modified: 2013-01-10 14:41 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Fabio Pedretti 2013-01-10 13:09:35 UTC
Sauerbraten game shows corruption when enabling MSAA. This may be similar to bug #59172, but this happens also with MSAA 2x and small resolutions.

Tested on current git with:
r300: DRM version: 2.18.0, Name: ATI RV530, ID: 0x71c5, GB: 1, Z: 2
r300: GART size: 509 MB, VRAM size: 256 MB
r300: AA compression RAM: YES, Z compression RAM: YES, HiZ RAM: YES
Comment 1 Marek Olšák 2013-01-10 14:41:16 UTC
Fixed by 2f89949b666889a61196657511b1dee4418ae865. Closing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.